Removed the coinwallet and tokenwallet from user canister and moved it to the token canister, added code to fetch the data from token canister and to update the tokenlist and recordlist. Added inter canister communication between user canister and token canister.

--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "last 2 firefox version",
     "last 2 safari version",
     "last 2 edge version"
-  ]
+  ],
+  "dependencies": {
+    "@dfinity/auth-client": "^0.10.1"
+  }
 }
