--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 .vscode/settings.json
+.vscode
+
+.build
 
 # yarn v2
 .yarn/cache
