--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "contracts",
-  "version": "1.0.0",
-  "description": "The following are the name and scope of the Contracts",
-  "main": "truffle-config.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ioannist/crowdrecords.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ioannist/crowdrecords/issues"
-  },
-  "homepage": "https://github.com/ioannist/crowdrecords#readme",
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
-  }
+    "name": "contracts",
+    "version": "1.0.0",
+    "description": "The following are the name and scope of the Contracts",
+    "main": "truffle-config.js",
+    "directories": {
+        "test": "test"
+    },
+    "scripts": {
+        "test": "truffle test ./test/index.js",
+        "ganache": "ganache --wallet.seed myCustomSeed"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ioannist/crowdrecords.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ioannist/crowdrecords/issues"
+    },
+    "homepage": "https://github.com/ioannist/crowdrecords#readme",
+    "dependencies": {
+        "@openzeppelin/contracts": "^4.5.0",
+        "ganache": "^7.0.5"
+    }
 }
+
