--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "dependencies": {
         "@ethersproject/bignumber": "^5.6.2",
         "@openzeppelin/contracts": "^4.5.0",
+        "@openzeppelin/test-helpers": "^0.5.15",
+        "chai": "^4.3.6",
+        "chai-as-promised": "^7.1.1",
+        "chai-bn": "^0.3.1",
         "ganache": "^7.0.5"
     }
 }
