--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "chai": "^4.3.6",
         "chai-as-promised": "^7.1.1",
         "chai-bn": "^0.3.1",
-        "ganache": "^7.0.5"
+        "ganache": "^7.0.5",
+        "solhint": "^3.3.7"
     }
 }
