--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@ethersproject/bignumber": "^5.6.2",
         "@openzeppelin/contracts": "^4.5.0",
+        "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
         "@openzeppelin/test-helpers": "^0.5.15",
         "chai": "^4.3.6",
         "chai-as-promised": "^7.1.1",
@@ -32,3 +33,4 @@
         "web3": "^1.7.5"
     }
 }
+
