--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
         "@openzeppelin/contracts": "^4.5.0",
         "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
         "@openzeppelin/test-helpers": "^0.5.15",
+        "@truffle/hdwallet-provider": "^2.1.10",
         "chai": "^4.3.6",
         "chai-as-promised": "^7.1.1",
         "chai-bn": "^0.3.1",
         "ganache": "^7.0.5",
         "solhint": "^3.3.7",
+        "truffle-plugin-verify": "^0.6.3",
         "web3": "^1.7.5"
+    },
+    "devDependencies": {
+        "dotenv": "^16.0.3"
     }
 }
-
