--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
         "activityBar.background": "#08360A",
         "titleBar.activeBackground": "#0C4B0F",
         "titleBar.activeForeground": "#F3FDF3"
-    }
+    },
+    "cSpell.words": [
+        "crowdrecords"
+    ],
+    "slither.solcPath": "",
+    "slither.hiddenDetectors": []
 }
